@@ -1205,6 +1205,35 @@ namespace Astroid {
             ky = (c = g_mime_certificate_get_key_id (ce), c ? c : "");
 
 
+# if (GMIME_MAJOR_VERSION < 3)
+            switch (g_mime_signature_get_status (s)) {
+              case GMIME_SIGNATURE_STATUS_GOOD:
+                gd = "Good";
+                break;
+
+              case GMIME_SIGNATURE_STATUS_BAD:
+                gd = "Bad";
+                // fall through
+
+              case GMIME_SIGNATURE_STATUS_ERROR:
+                if (gd.empty ()) gd = "Erroneous";
+
+                GMimeSignatureError e = g_mime_signature_get_errors (s);
+                if (e & GMIME_SIGNATURE_ERROR_EXPSIG)
+                  sig_errors.push_back ("expired");
+                if (e & GMIME_SIGNATURE_ERROR_NO_PUBKEY)
+                  sig_errors.push_back ("no-pub-key");
+                if (e & GMIME_SIGNATURE_ERROR_EXPKEYSIG)
+                  sig_errors.push_back ("expired-key-sig");
+                if (e & GMIME_SIGNATURE_ERROR_REVKEYSIG)
+                  sig_errors.push_back ("revoked-key-sig");
+                if (e & GMIME_SIGNATURE_ERROR_UNSUPP_ALGO)
+                  sig_errors.push_back ("unsupported-algo");
+                if (!sig_errors.empty ()) {
+                  err = "[Error: " + VectorUtils::concat (sig_errors, ",") + "]";
+                }
+                break;
+# else
             GMimeSignatureStatus stat = g_mime_signature_get_status (s);
             if (g_mime_signature_status_good (stat)) {
                 gd = "Good";
@@ -1226,11 +1255,24 @@ namespace Astroid {
               if (!sig_errors.empty ()) {
                 err = "[Error: " + VectorUtils::concat (sig_errors, ",") + "]";
               }
+# endif
             }
           } else {
             err = "[Error: Could not get certificate]";
           }
 
+# if (GMIME_MAJOR_VERSION < 3)
+          GMimeCertificateTrust t = g_mime_certificate_get_trust (ce);
+          ustring trust = "";
+          switch (t) {
+            case GMIME_CERTIFICATE_TRUST_NONE: trust = "none"; break;
+            case GMIME_CERTIFICATE_TRUST_NEVER: trust = "never"; break;
+            case GMIME_CERTIFICATE_TRUST_UNDEFINED: trust = "undefined"; break;
+            case GMIME_CERTIFICATE_TRUST_MARGINAL: trust = "marginal"; break;
+            case GMIME_CERTIFICATE_TRUST_FULLY: trust = "fully"; break;
+            case GMIME_CERTIFICATE_TRUST_ULTIMATE: trust = "ultimate"; break;
+          }
+# else
           GMimeTrust t = g_mime_certificate_get_trust (ce);
           ustring trust = "";
           switch (t) {
@@ -1241,6 +1283,7 @@ namespace Astroid {
             case GMIME_TRUST_FULL: trust = "full"; break;
             case GMIME_TRUST_ULTIMATE: trust = "ultimate"; break;
           }
+# endif
 
 
           sign_string += ustring::compose (
