@@ -57,8 +57,12 @@ BOOST_AUTO_TEST_SUITE(Dates)
       GMimeMessage * m = a.message;
       g_object_ref (m);
 
+# if (GMIME_MAJOR_VERSION < 3)
+      g_mime_message_set_date_as_string (m, d.c_str ());
+# else
       GDateTime * dt = g_mime_utils_header_decode_date (d.c_str ());
       g_mime_message_set_date (m, dt);
+# endif
 
       Message b (m);
 
